--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -26,5 +26,4 @@ jobs:
         REPO: self
         BRANCH: gh-pages
         FOLDER: dist
-        SSH_PRIVATE_KEY: ${{ secrets.GITHUB_TOKEN }}
-
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
